# xkcd-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: integration_test.rs
